minor changes renaming function and improve comments

--- a/Ch11/11.1_seq2seq_machine_translation.ipynb
+++ b/Ch11/11.1_seq2seq_machine_translation.ipynb
@@ -807,7 +807,7 @@
     "        return tf.keras.models.Model(inputs=inp, outputs=vectorized_out, name=name), vectorize_layer.get_vocabulary()\n",
     "    \n",
     "        \n",
-    "def get_encoder_and_state(n_vocab, vectorizer):\n",
+    "def get_encoder(n_vocab, vectorizer):\n",
     "    \"\"\" Define the encoder of the seq2seq model\"\"\"\n",
     "    \n",
     "    # The input is (None,1) shaped and accepts an array of strings\n",
@@ -832,8 +832,6 @@
     "    # Define the encoder model\n",
     "    encoder = tf.keras.models.Model(inputs=inp, outputs=gru_out, name='encoder')\n",
     "        \n",
-    "    # We are also returning the final state of the encoder as that\n",
-    "    # is passed as the initial state to the decoder\n",
     "    return encoder\n",
     "\n",
     "\n",
@@ -888,7 +886,7 @@
     "de_vectorizer, de_vocabulary = get_vectorizer(np.array(train_df[\"DE\"].tolist()), de_vocab, max_length=de_seq_length-1, name='d_vectorizer')\n",
     "\n",
     "# Define the final model\n",
-    "encoder = get_encoder_and_state(en_vocab, en_vectorizer)\n",
+    "encoder = get_encoder(en_vocab, en_vectorizer)\n",
     "final_model = get_final_seq2seq_model(de_vocab, encoder, de_vectorizer)\n"
    ]
   },
