Minor fixes, added two BLEU computation examples to show difference in BLEU as the wrong prediction position changes

--- a/Ch11/11.1_seq2seq_machine_translation.ipynb
+++ b/Ch11/11.1_seq2seq_machine_translation.ipynb
@@ -780,7 +780,7 @@
     "import tensorflow.keras.backend as K\n",
     "K.clear_session()\n",
     "\n",
-    "def get_vectorizer(list_of_strings, n_vocab, max_length=None, return_vocabulary=True, name=None):\n",
+    "def get_vectorizer(corpus, n_vocab, max_length=None, return_vocabulary=True, name=None):\n",
     "    \n",
     "    \"\"\" Return a text vectorization layer or a model \"\"\"\n",
     "    \n",
@@ -795,7 +795,7 @@
     "    )\n",
     "    \n",
     "    # Fit the vectorizer layer on the data\n",
-    "    vectorize_layer.adapt(list_of_strings)\n",
+    "    vectorize_layer.adapt(corpus)\n",
     "        \n",
     "    # Get the token IDs\n",
     "    vectorized_out = vectorize_layer(inp)\n",
@@ -1061,10 +1061,18 @@
     }
    ],
    "source": [
-    "translation = [['[UNK]', 'einmal', 'mÃ¼ssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]\n",
+    "translation = [['[UNK]', '[UNK]', 'mÃ¼ssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', '[UNK]']]\n",
     "reference = [[['als', 'mÃ¼ssen', 'mÃ¼ssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]]\n",
     "\n",
-    "compute_bleu(reference, translation)"
+    "bleu1, _, _, _, _, _ = compute_bleu(reference, translation)\n",
+    "\n",
+    "translation = [['[UNK]', 'einmal', 'mÃ¼ssen', '[UNK]', 'in', 'erfahrung', '[UNK]', 'wo', 'sie', 'wohnen']]\n",
+    "reference = [[['als', 'mÃ¼ssen', 'mÃ¼ssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]]\n",
+    "\n",
+    "bleu2, _, _, _, _, _ = compute_bleu(reference, translation)\n",
+    "\n",
+    "print(\"BLEU score with longer correctly predicte phrases: {}\".format(bleu1))\n",
+    "print(\"BLEU score without longer correctly predicte phrases: {}\".format(bleu2))"
    ]
   },
   {
@@ -1151,7 +1159,7 @@
     "    return (en_inputs[shuffle_inds], de_inputs[shuffle_inds], de_labels[shuffle_inds]), shuffle_inds\n",
     "\n",
     "\n",
-    "def evaluate_model(model, vectorizer, en_inputs_raw, de_inputs_raw, de_labels_raw, epochs, batch_size):\n",
+    "def evaluate_model(model, vectorizer, en_inputs_raw, de_inputs_raw, de_labels_raw, batch_size):\n",
     "    \"\"\" Evaluate the model on various metrics such as loss, accuracy and BLEU \"\"\"\n",
     "    \n",
     "    # Define the metric\n",
@@ -1249,7 +1257,7 @@
     "        val_de_labels = data_dict['valid']['decoder_labels']\n",
     "            \n",
     "        val_loss, val_accuracy, val_bleu = evaluate_model(\n",
-    "            model, vectorizer, val_en_inputs, val_de_inputs, val_de_labels, epochs, batch_size\n",
+    "            model, vectorizer, val_en_inputs, val_de_inputs, val_de_labels, batch_size\n",
     "        )\n",
     "            \n",
     "        # Print the evaluation metrics of each epoch\n",
@@ -1266,7 +1274,7 @@
     "    test_de_labels = data_dict['test']['decoder_labels']\n",
     "            \n",
     "    test_loss, test_accuracy, test_bleu = evaluate_model(\n",
-    "            model, vectorizer, test_en_inputs, test_de_inputs, test_de_labels, epochs, batch_size\n",
+    "            model, vectorizer, test_en_inputs, test_de_inputs, test_de_labels, batch_size\n",
     "    )\n",
     "    \n",
     "    print(\"\\n(test) loss: {} - accuracy: {} - bleu: {}\".format(test_loss, test_accuracy, test_bleu))\n",
