Added 2 examples to compare BLEU score

--- a/Ch11/11.1_seq2seq_machine_translation.ipynb
+++ b/Ch11/11.1_seq2seq_machine_translation.ipynb
@@ -1061,13 +1061,13 @@
     }
    ],
    "source": [
-    "translation = [['[UNK]', '[UNK]', 'mÃ¼ssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', '[UNK]']]\n",
-    "reference = [[['als', 'mÃ¼ssen', 'mÃ¼ssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]]\n",
+    "translation = [['[UNK]', '[UNK]', 'mÃssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', '[UNK]']]\n",
+    "reference = [[['als', 'mÃssen', 'mÃssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]]\n",
     "\n",
     "bleu1, _, _, _, _, _ = compute_bleu(reference, translation)\n",
     "\n",
-    "translation = [['[UNK]', 'einmal', 'mÃ¼ssen', '[UNK]', 'in', 'erfahrung', '[UNK]', 'wo', 'sie', 'wohnen']]\n",
-    "reference = [[['als', 'mÃ¼ssen', 'mÃ¼ssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]]\n",
+    "translation = [['[UNK]', 'einmal', 'mÃssen', '[UNK]', 'in', 'erfahrung', '[UNK]', 'wo', 'sie', 'wohnen']]\n",
+    "reference = [[['als', 'mÃssen', 'mÃssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]]\n",
     "\n",
     "bleu2, _, _, _, _, _ = compute_bleu(reference, translation)\n",
     "\n",
