Added BLEU comparison. Improved BLEU comments

--- a/Ch11/11.1_seq2seq_machine_translation.ipynb
+++ b/Ch11/11.1_seq2seq_machine_translation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "4  Run.       Lauf!"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +995,7 @@
     "            \"\"\" Clean padding and [SOS]/[EOS] tokens to only keep meaningful words \"\"\"\n",
     "            \n",
     "            # 3. Strip the string of any extra white spaces\n",
-    "            t = tf.strings.strip(\n",
+    "            translations_in_bytes = tf.strings.strip(\n",
     "                        # 2. Replace everything after the eos token with blank\n",
     "                        tf.strings.regex_replace(\n",
     "                            # 1. Join all the tokens to one string in each sequence\n",
@@ -1006,22 +1006,24 @@
     "                   )\n",
     "            \n",
     "            # Decode the byte stream to a string\n",
-    "            t = np.char.decode(t.numpy().astype(np.bytes_), encoding='utf-8')\n",
+    "            translations = np.char.decode(\n",
+    "                translations_in_bytes.numpy().astype(np.bytes_), encoding='utf-8'\n",
+    "            )\n",
     "            \n",
     "            # If the string is empty, add a [UNK] token\n",
     "            # Otherwise get a Division by zero error\n",
-    "            t = [doc if len(doc)>0 else '[UNK]' for doc in t ]\n",
+    "            translations = [sent if len(sent)>0 else '[UNK]' for sent in translations ]\n",
     "            \n",
     "            # Split the sequences to individual tokens \n",
-    "            t = np.char.split(t).tolist()\n",
+    "            translations = np.char.split(translations).tolist()\n",
     "            \n",
-    "            return t\n",
+    "            return translations\n",
     "        \n",
     "        # Get the clean versions of the predictions and real seuqences\n",
     "        pred_tokens = clean_text(pred_tokens)\n",
     "        # We have to wrap each real sequence in a list to make use of a function to compute bleu\n",
-    "        real_tokens = [[r] for r in clean_text(real_tokens)]\n",
-    "        \n",
+    "        real_tokens = [[token_seq] for token_seq in clean_text(real_tokens)]\n",
+    "\n",
     "        # The compute_bleu method accpets the translations and references in the following format\n",
     "        # tranlation - list of list of tokens\n",
     "        # references - list of list of list of tokens\n",
@@ -1041,33 +1043,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.7598356856515925,\n",
-       " [0.8, 0.7777777777777778, 0.75, 0.7142857142857143],\n",
-       " 1.0,\n",
-       " 1.0,\n",
-       " 10,\n",
-       " 10)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU score with longer correctly predicte phrases: 0.7598356856515925\n",
+      "BLEU score without longer correctly predicte phrases: 0.537284965911771\n"
+     ]
     }
    ],
    "source": [
-    "translation = [['[UNK]', '[UNK]', 'mÃssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', '[UNK]']]\n",
+    "translation = [['[UNK]', '[UNK]', 'mÃssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]\n",
     "reference = [[['als', 'mÃssen', 'mÃssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]]\n",
     "\n",
     "bleu1, _, _, _, _, _ = compute_bleu(reference, translation)\n",
     "\n",
-    "translation = [['[UNK]', 'einmal', 'mÃssen', '[UNK]', 'in', 'erfahrung', '[UNK]', 'wo', 'sie', 'wohnen']]\n",
+    "translation = [['[UNK]', 'einmal', 'mÃssen', '[UNK]', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]\n",
     "reference = [[['als', 'mÃssen', 'mÃssen', 'wir', 'in', 'erfahrung', 'bringen', 'wo', 'sie', 'wohnen']]]\n",
+    "\n",
     "\n",
     "bleu2, _, _, _, _, _ = compute_bleu(reference, translation)\n",
     "\n",
@@ -1092,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1101,27 +1097,28 @@
      "text": [
       "Evaluating batch 39/39\n",
       "Epoch 1/5\n",
-      "\t(train) loss: 1.7673478011901562 - accuracy: 0.24513264504285195 - bleu: 0.002179387607593193\n",
-      "\t(valid) loss: 1.4485881817646515 - accuracy: 0.33110261345520997 - bleu: 0.01199333936034144\n",
+      "\t(train) loss: 1.7741597780050375 - accuracy: 0.2443966139585544 - bleu: 0.0014343267864378607\n",
+      "\t(valid) loss: 1.4453194752717629 - accuracy: 0.3318057709779495 - bleu: 0.010740537197906803\n",
       "Evaluating batch 39/39\n",
       "Epoch 2/5\n",
-      "\t(train) loss: 1.3196139595447443 - accuracy: 0.3695648503609193 - bleu: 0.030331061497335617\n",
-      "\t(valid) loss: 1.212600277020381 - accuracy: 0.40372603902449977 - bleu: 0.047088649383548294\n",
+      "\t(train) loss: 1.3242260752580104 - accuracy: 0.36704301069944334 - bleu: 0.02787443852220776\n",
+      "\t(valid) loss: 1.1998639076184003 - accuracy: 0.4055710052832579 - bleu: 0.0528771041810827\n",
       "Evaluating batch 39/39\n",
       "Epoch 3/5\n",
-      "\t(train) loss: 1.1058441591568482 - accuracy: 0.43287440026417756 - bleu: 0.06973255766539602\n",
-      "\t(valid) loss: 1.0736533525662544 - accuracy: 0.4464820676889175 - bleu: 0.07360283948444667\n",
+      "\t(train) loss: 1.1003264645353341 - accuracy: 0.4325206082027692 - bleu: 0.06848386086465573\n",
+      "\t(valid) loss: 1.052520507421249 - accuracy: 0.45271892043260425 - bleu: 0.08434891694358564\n",
       "Evaluating batch 39/39\n",
       "Epoch 4/5\n",
-      "\t(train) loss: 0.947786437968413 - accuracy: 0.4818474271167547 - bleu: 0.10347354581510186\n",
-      "\t(valid) loss: 0.9735986498685983 - accuracy: 0.48121631680390775 - bleu: 0.10747072579117517\n",
+      "\t(train) loss: 0.9388554411438795 - accuracy: 0.4841502562929422 - bleu: 0.10431404719754407\n",
+      "\t(valid) loss: 0.9588208626478146 - accuracy: 0.4864643529439584 - bleu: 0.11131814855016856\n",
       "Evaluating batch 39/39\n",
       "Epoch 5/5\n",
-      "\t(train) loss: 0.8230568886949465 - accuracy: 0.5244687414513185 - bleu: 0.13671692051662485\n",
-      "\t(valid) loss: 0.8996234964101743 - accuracy: 0.509787013897529 - bleu: 0.1232997804591892\n",
-      "\t(test) loss: 0.9086625560736045 - accuracy: 0.5111884642869998 - bleu: 0.12581887340240752\n",
+      "\t(train) loss: 0.814081399104534 - accuracy: 0.5280381464041196 - bleu: 0.1409178724874819\n",
+      "\t(valid) loss: 0.8876287539800009 - accuracy: 0.514901713683055 - bleu: 0.1285171513954398\n",
+      "Evaluating batch 39/39\n",
+      "(test) loss: 0.9077589313189188 - accuracy: 0.5076315150811122 - bleu: 0.12664703414801345\n",
       "\n",
-      "It took 258.0026841163635 seconds to complete the training\n"
+      "It took 251.19076132774353 seconds to complete the training\n"
      ]
     }
    ],
