Some experimentation with tfa.seq2seq

--- a/Ch11/11.1_seq2seq_machine_translation.ipynb
+++ b/Ch11/11.1_seq2seq_machine_translation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "4  Run.       Lauf!"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1472,6 +1472,167 @@
    "metadata": {},
    "source": [
     "## Seq2Seq model with Attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "batch_size and dtype cannot be None while constructing initial state: batch_size=None, dtype=None",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-058817918e32>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    133\u001b[0m \u001b[0;31m# Define the final model with attention\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m \u001b[0mencoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_encoder_with_attention\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0men_vocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0men_vectorizer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 135\u001b[0;31m \u001b[0mfinal_model_with_attention\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_final_seq2seq_model_with_attention\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mde_vocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mde_vectorizer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    136\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-22-058817918e32>\u001b[0m in \u001b[0;36mget_final_seq2seq_model_with_attention\u001b[0;34m(n_vocab, encoder, vectorizer)\u001b[0m\n\u001b[1;32m     95\u001b[0m         \u001b[0md_gru_layer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattention_mechanism\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattention_layer_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m     )\n\u001b[0;32m---> 97\u001b[0;31m     \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md_attention_gru\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_initial_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     98\u001b[0m     \u001b[0mstate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcell_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md_init_state\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/manning.tf2/lib/python3.6/site-packages/tensorflow_addons/seq2seq/attention_wrapper.py\u001b[0m in \u001b[0;36mget_initial_state\u001b[0;34m(self, inputs, batch_size, dtype)\u001b[0m\n\u001b[1;32m   1910\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1911\u001b[0m                 cell_state = self._cell.get_initial_state(\n\u001b[0;32m-> 1912\u001b[0;31m                     \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1913\u001b[0m                 )\n\u001b[1;32m   1914\u001b[0m             error_message = (\n",
+      "\u001b[0;32m~/anaconda3/envs/manning.tf2/lib/python3.6/site-packages/tensorflow/python/keras/layers/recurrent.py\u001b[0m in \u001b[0;36mget_initial_state\u001b[0;34m(self, inputs, batch_size, dtype)\u001b[0m\n\u001b[1;32m   1946\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1947\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mget_initial_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1948\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_generate_zero_filled_state_for_cell\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1949\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1950\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/manning.tf2/lib/python3.6/site-packages/tensorflow/python/keras/layers/recurrent.py\u001b[0m in \u001b[0;36m_generate_zero_filled_state_for_cell\u001b[0;34m(cell, inputs, batch_size, dtype)\u001b[0m\n\u001b[1;32m   2985\u001b[0m     \u001b[0mbatch_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2986\u001b[0m     \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2987\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0m_generate_zero_filled_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2988\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2989\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/manning.tf2/lib/python3.6/site-packages/tensorflow/python/keras/layers/recurrent.py\u001b[0m in \u001b[0;36m_generate_zero_filled_state\u001b[0;34m(batch_size_tensor, state_size, dtype)\u001b[0m\n\u001b[1;32m   2993\u001b[0m     raise ValueError(\n\u001b[1;32m   2994\u001b[0m         \u001b[0;34m'batch_size and dtype cannot be None while constructing initial state: '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2995\u001b[0;31m         'batch_size={}, dtype={}'.format(batch_size_tensor, dtype))\n\u001b[0m\u001b[1;32m   2996\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2997\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mcreate_zeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munnested_state_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: batch_size and dtype cannot be None while constructing initial state: batch_size=None, dtype=None"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow_addons as tfa\n",
+    "\n",
+    "import tensorflow.keras.backend as K\n",
+    "K.clear_session()\n",
+    "\n",
+    "def get_vectorizer(list_of_strings, n_vocab, max_length=None, return_vocabulary=True, name=None):\n",
+    "    \n",
+    "    \"\"\" Return a text vectorization layer or a model \"\"\"\n",
+    "    \n",
+    "    # Definie an input layer that takes a list of strings (or an array of strings)\n",
+    "    inp = tf.keras.Input(shape=(1,), dtype=tf.string, name='encoder_input')\n",
+    "    \n",
+    "    # When defining the vocab size, we'd add two for special tokens '' (Padding) and '[UNK]' (Oov tokens)\n",
+    "    vectorize_layer = tf.keras.layers.experimental.preprocessing.TextVectorization(\n",
+    "        max_tokens=n_vocab+2,\n",
+    "        output_mode='int',\n",
+    "        output_sequence_length=max_length,                \n",
+    "    )\n",
+    "    \n",
+    "    # Fit the vectorizer layer on the data\n",
+    "    vectorize_layer.adapt(list_of_strings)\n",
+    "        \n",
+    "    # Get the token IDs\n",
+    "    vectorized_out = vectorize_layer(inp)\n",
+    "        \n",
+    "    if not return_vocabulary: \n",
+    "        return tf.keras.models.Model(inputs=inp, outputs=vectorized_out, name=name)    \n",
+    "    else:\n",
+    "        # Returns the vocabulary in addition to the model\n",
+    "        return tf.keras.models.Model(inputs=inp, outputs=vectorized_out, name=name), vectorize_layer.get_vocabulary()\n",
+    "    \n",
+    "\n",
+    "def get_encoder_with_attention(n_vocab, vectorizer):\n",
+    "    \"\"\" Define the encoder of the seq2seq model\"\"\"\n",
+    "    \n",
+    "    # The input is (None,1) shaped and accepts an array of strings\n",
+    "    inp = tf.keras.Input(shape=(1,), dtype=tf.string, name='e_input')\n",
+    "\n",
+    "    # Vectorize the data (assign token IDs)\n",
+    "    vectorized_out = vectorizer(inp)\n",
+    "    \n",
+    "    # Define an embedding layer to convert IDs to word vectors\n",
+    "    emb_layer = tf.keras.layers.Embedding(n_vocab+2, 128, mask_zero=True, name='e_embedding')\n",
+    "    # Get the embeddings of the token IDs\n",
+    "    emb_out = emb_layer(vectorized_out)\n",
+    "    \n",
+    "    # Define a bidirectional GRU layer\n",
+    "    # Encoder looks at the english text (i.e. the input) both backwards and forward\n",
+    "    # this leads to better performance\n",
+    "    gru_layer = tf.keras.layers.Bidirectional(\n",
+    "        tf.keras.layers.GRU(128, return_sequences=True, return_state=True, name='e_gru'), \n",
+    "        name='e_bidirectional_gru'\n",
+    "    )\n",
+    "    \n",
+    "    # Get the output of the gru layer\n",
+    "    gru_out_sequence, gru_fwd_out, gru_bwd_out = gru_layer(emb_out)\n",
+    "    # Define the encoder model\n",
+    "    encoder = tf.keras.models.Model(inputs=inp, outputs=[gru_fwd_out, gru_bwd_out, gru_out_sequence], name='encoder')\n",
+    "        \n",
+    "    # We are also returning the final state of the encoder as that\n",
+    "    # is passed as the initial state to the decoder\n",
+    "    return encoder\n",
+    "\n",
+    "\n",
+    "def get_final_seq2seq_model_with_attention(n_vocab, encoder, vectorizer):\n",
+    "    \"\"\" Define the final encoder-decoder model \"\"\"\n",
+    "    \n",
+    "    e_inp = tf.keras.Input(shape=(1,), dtype=tf.string, name='e_input_final')    \n",
+    "    fwd_state, bwd_state, en_states = encoder(e_inp)\n",
+    "    \n",
+    "    # The input is (None,1) shaped and accepts an array of strings\n",
+    "    # This input layer is used to train the seq2seq model with teacher-forcing\n",
+    "    # we feed the German sequence as the input and ask the model to predict \n",
+    "    # it with the words offset by 1 (i.e. next word)\n",
+    "    d_inp = tf.keras.Input(shape=(1,), dtype=tf.string, name='d_input')\n",
+    "    \n",
+    "    # Vectorize the data (assign token IDs)\n",
+    "    d_vectorized_out = vectorizer(d_inp)\n",
+    "    \n",
+    "    # Define an embedding layer to convert IDs to word vectors\n",
+    "    # Note that this is a different embedding layer to the encoder's embedding layer\n",
+    "    d_emb_layer = tf.keras.layers.Embedding(n_vocab+2, 128, mask_zero=True, name='d_embedding')\n",
+    "    \n",
+    "    # Get the embeddings of the token IDs\n",
+    "    d_emb_out = d_emb_layer(d_vectorized_out)\n",
+    "    \n",
+    "    # Define a GRU layer\n",
+    "    # Unlike the encoder, we cannot define a bidirectional GRU for the decoder        \n",
+    "    d_gru_layer = tf.keras.layers.GRUCell(256, name='d_gru')\n",
+    "    d_init_state = tf.keras.layers.Concatenate(axis=-1)([fwd_state, bwd_state])\n",
+    "    \n",
+    "    attention_mechanism = tfa.seq2seq.BahdanauAttention(units=256, memory=en_states)\n",
+    "\n",
+    "    d_attention_gru = tfa.seq2seq.AttentionWrapper(\n",
+    "        d_gru_layer, attention_mechanism, attention_layer_size=256\n",
+    "    )\n",
+    "    state = d_attention_gru.get_initial_state()\n",
+    "    state.cell_state = d_init_state\n",
+    "\n",
+    "    sampler = tfa.seq2seq.TrainingSampler()\n",
+    "    decoder = tfa.seq2seq.BasicDecoder(d_attention_gru, sampler)\n",
+    "    \n",
+    "    out, _, _ = decoder(d_emb_out, initial_state=state)\n",
+    "    print(out.shape)\n",
+    "    # Get the output of the gru layer\n",
+    "    #d_init_state = tf.keras.layers.Concatenate(axis=-1)([fwd_state, bwd_state])\n",
+    "    #de_state = d_gru_layer(d_emb_out, initial_state=d_init_state)\n",
+    "    \n",
+    "    #attn_layer = AttentionLayer(name='attention_layer')\n",
+    "    #attn_out, attn_states = attn_layer([en_states, de_state])\n",
+    "    \n",
+    "    # Concatenate the decoder gru output and the attention vectors\n",
+    "    #d_concat_input = tf.keras.layers.Concatenate(axis=-1, name='concat_layer')([de_state, attn_out])\n",
+    "\n",
+    "    # Define an intermediate dense layer\n",
+    "    #d_dense_layer_1 = tf.keras.layers.Dense(512, activation='relu', name='d_dense_1')\n",
+    "    #d_dense1_out = d_dense_layer_1(d_concat_input)\n",
+    "    \n",
+    "    # The final prediction layer with softmax\n",
+    "    #d_final_layer = tf.keras.layers.Dense(n_vocab+2, activation='softmax', name='d_dense_final')\n",
+    "    #d_final_out = d_final_layer(d_dense1_out)\n",
+    "    \n",
+    "    # Define the full model\n",
+    "    #seq2seq = tf.keras.models.Model(inputs=[e_inp, d_inp], outputs=d_final_out, name='final_seq2seq_with_attention')\n",
+    "    \n",
+    "    return seq2seq\n",
+    "\n",
+    "# Get the English vectorizer/vocabulary\n",
+    "en_vectorizer, en_vocabulary = get_vectorizer(np.array(train_df[\"EN\"].tolist()), en_vocab, max_length=en_seq_length, name='e_vectorizer')\n",
+    "# Get the German vectorizer/vocabulary\n",
+    "de_vectorizer, de_vocabulary = get_vectorizer(np.array(train_df[\"DE\"].tolist()), de_vocab, max_length=de_seq_length-1, name='d_vectorizer')\n",
+    "\n",
+    "# Define the final model with attention\n",
+    "encoder = get_encoder_with_attention(en_vocab, en_vectorizer)\n",
+    "final_model_with_attention = get_final_seq2seq_model_with_attention(de_vocab, encoder, de_vectorizer)\n",
+    "\n"
    ]
   },
   {
